# house-rental-alert-system

./: .gitignore  README.md  app.py  floorplan_roi_ocr.py  pyproject.toml  rent_splitter.py  rightmove_listings.ipynb  test_travel_utils.ipynb  travel_utils.py
files/: 43_lydford_road_roi_results.json
rent_splitter/: app.py  floorplan_roi_ocr.py  rent_splitter.py
rent_splitter/files/: 43_lydford_road_regions.json
rent_splitter/templates/: index.html
rental_alerts/: config.yaml  test_travel_utils.ipynb  travel_utils.py
