[project]
name = "house-rental-alert-system"
version = "0.1.0"
description = "House rental alert system: scrape Rightmove listings and compute travel times to targets."
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
]
