[project]
name = "house-rental-alert-system"
version = "0.1.0"
description = "House rental alert system: scrape Rightmove listings and compute travel times to targets."
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "flask>=3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
]
